# BSN-Assessment

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: app.py  availabilty.py  customer.py  db.py  rental.py  report.py  schema.sql  vehicle.py
